More work on draft.